@@ -6,6 +6,7 @@ xymon (4.3.23) unstable; urgency=high
    * Fix broken 'TRACK' and 'OPTIONAL' identifiers in analysis.cfg
    * Prevent logfetch from segfaulting if a file we're tracking line matching
      deltacounts for wasn't found      
+   * Fix a type mismatch compiler warning in display group name alert matching
 
  -- Japheth Cleaver <cleaver-xymon@terabithia.org>  Wed, 11 Nov 2015 22:00:00 -0800
 
